--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
     "emailjs-com": "^3.2.0",
+    "firebase": "^9.17.1",
     "three": "^0.149.0",
     "vue": "^3.2.45",
-    "vue-resource": "^1.5.3"
+    "vue-resource": "^1.5.3",
+    "vuefire": "^3.0.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
