--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "three": "^0.149.0",
     "vue": "^3.2.45",
     "vue-resource": "^1.5.3",
+    "vue-router": "^4.1.6",
     "vuefire": "^3.0.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
+    "node-sass": "^8.0.0",
+    "sass-loader": "^13.2.0",
     "vite": "^4.0.0"
   },
   "description": "Bienvenue sur mon portfolio personnel, créé avec Vue.js.",
