--- a/package.json
+++ b/package.json
@@ -8,21 +8,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emailjs/browser": "^3.10.0",
-    "emailjs-com": "^3.2.0",
-    "firebase": "^9.17.1",
-    "firestore": "^1.1.6",
+    "@vuelidate/core": "^2.0.0",
+    "@vuelidate/validators": "^2.0.0",
     "three": "^0.149.0",
-    "vee-validate": "^4.7.4",
     "vue": "^3.2.45",
     "vue-resource": "^1.5.3",
-    "vue-router": "^4.1.6",
-    "vuefire": "^3.0.1"
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
-    "@vuelidate/core": "^2.0.0",
-    "@vuelidate/validators": "^2.0.0",
     "node-sass": "^8.0.0",
     "sass-loader": "^13.2.0",
     "vite": "^4.0.0"
