--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
     "node-sass": "^8.0.0",
+    "sass": "^1.62.1",
     "sass-loader": "^13.2.0",
     "vite": "^4.0.0"
   },
